2006-03-20  Johannes Schmid <jhs@gnome.org>

	* plugins/sourceview/anjuta-document-loader.c
	plugins/sourceview/sourceview.c:
	
	Fixed encoding bugs

2006-03-20  Jean-Noel Guiheneuf <guiheneuf.jean-noel@wanadoo.fr>

	* plugins/sourceview/sourceview.c, plugins/search/search-replace_backend.c :
	Fixed bug (line position)
	Give the good line position whatever the active editor.

2006-03-19  Ilkka Tuohela  <hile@iki.fi>

	* configure.in: Added fi to ALL_LINGUAS

2006-03-19  Johannes Schmid <jhs@gnome.org>

	* plugins/sourceview/anjuta-document-loader.c:
	replace gnome_vfs_get_mime_type_for_name_and data

	* plugins/build-basic-autotools/build-basic-autotools.c:
	Fixed #335142

2006-03-17  Johannes Schmid <jhs@gnome.org>

	* plugins/editor/editor.glade:
	Added style-editor again after it got lost somehow

2006-03-17  Johannes Schmid <jhs@gnome.org>

	* plugins/devhelp/plugin.c: Updated to work with devhelp-0.11
	configure.in: require devhelp 0.11
	
	Post 0.11 devhelp versions (CVS) do not work because of an API change...

	plugins/build-basic-autotools/build-basic-autotools.c:
	forgot a an installtion callback for the "install as root"-feature

2006-03-17  Massimo Cora' <maxcvs@email.it>

	reviewed by: Johannes Schmid <jhs@gnome.org>

	* plugins/class-gen/anjuta-class-gen-plugin.glade
	plugins/class-gen/class_gen.c 
	plugins/class-gen/goc_template_header
	plugins/class-gen/goc_template_source
	
	Fixed bug #334663

2006-03-16  Johannes Schmid <jhs@gnome.org>

	* plugins/sourceview/sourceview.c:
	Fixed "save-point" signal for undo actions

2006-03-16  Massimo Cora' <maxcvs@email.it>
	
	reviewed by: Johannes Schmid <jhs@gnome.org>
	
	* plugins/document-manager/anjuta-docman.c:
	Implement tab drag and drop

2006-03-16  Johannes Schmid <jhs@gnome.org>

	* plugins/build-basic-autotools/anjuta-build-basic-autotools-plugin.glade:
	plugins/build-basic-autotools/build-basic-autotools.c:
	
	Implemented "install as root"-feature (#321455)
